add grid layout

--- a/src/app/terminal-navbar/terminal-navbar.component.html
+++ b/src/app/terminal-navbar/terminal-navbar.component.html
@@ -1,14 +1,14 @@
-<div class="terminal-window">
-  <div class="terminal-window-button" style="background-color:#FF5F57"></div>
-  <div class="terminal-window-button" style="background-color:#FEBC30"></div>
-  <div class="terminal-window-button" style="background-color:#2BC840"></div>
+<div>
+  <div class="terminal-window">
+    <div class="terminal-window-button" style="background-color: #ff5f57"></div>
+    <div class="terminal-window-button" style="background-color: #febc30"></div>
+    <div class="terminal-window-button" style="background-color: #2bc840"></div>
+  </div>
+  <nav>
+    <a class="nav-button-text" href="#home">~ Home</a>
+    <a class="nav-button-text" href="#about">About</a>
+    <a class="nav-button-text" href="projects">Projects</a>
+    <a class="nav-button-text" href="blog">Blog</a>
+    <a class="nav-button-text" href="contact">Contact</a>
+  </nav>
 </div>
-<nav>
-  <ul>
-    <li><a href="#home">~</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#projects">Projects</a></li>
-    <li><a href="#blog">Blog</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
