--- a/src/app/terminal-navbar/terminal-navbar.component.scss
+++ b/src/app/terminal-navbar/terminal-navbar.component.scss
@@ -1,7 +1,7 @@
 .terminal-window {
     background-color: #383938;
     width: 100%;
-    height: 4%;
+    height: 30px;
     position: absolute;
     align-items: center;
     display: flex;
@@ -16,40 +16,21 @@
     margin: 0 4px;
 }
 
-
 nav {
+    display: grid;
+    grid-gap: 0px;
+    grid-template-columns: 300px 300px 300px 300px 300px;
+    padding-top: 30px;
+}
+
+.nav-button-text {
     background-color: #333;
-    position: fixed;
-    top: 4%;
-    right: 0;
-    left: 0;
-
-}
-
-nav ul {
-    list-style-type: none;
-    overflow: hidden;
-    margin-bottom: 0px;
-    margin-top: 0px;
-    padding: 0;
-    display: flex;
-}
-
-nav li {
-    flex: 1;
-    border-right: 1.5px solid #454545;
-
-}
-
-nav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
+    color: #fff;
+    padding: 10px;
+    font-size: 110%;
     text-decoration: none;
-    font-size: 17px;
 }
 
-nav a:after {
+.nav-button-text:after {
     content: " (-FloOS)";
 }
