--- a/src/app/terminal-navbar/terminal-navbar.component.html
+++ b/src/app/terminal-navbar/terminal-navbar.component.html
@@ -1,14 +1,13 @@
-<div>
-  <div class="terminal-window">
-    <div class="terminal-window-button" style="background-color: #ff5f57"></div>
-    <div class="terminal-window-button" style="background-color: #febc30"></div>
-    <div class="terminal-window-button" style="background-color: #2bc840"></div>
-  </div>
-  <nav>
-    <a class="nav-button-text" href="#home">~ Home</a>
-    <a class="nav-button-text" href="#about">About</a>
-    <a class="nav-button-text" href="projects">Projects</a>
-    <a class="nav-button-text" href="blog">Blog</a>
-    <a class="nav-button-text" href="contact">Contact</a>
-  </nav>
+<div class="terminal-window">
+  <div class="terminal-window-button" style="background-color: #ff5f57"></div>
+  <div class="terminal-window-button" style="background-color: #febc30"></div>
+  <div class="terminal-window-button" style="background-color: #2bc840"></div>
+  <div class="terminal-window-name">florianschmitz@MacBook-Pro:~</div>
 </div>
+<nav>
+  <a class="nav-button-active" href="#home">~ Home</a>
+  <a class="nav-button" href="#about">About</a>
+  <a class="nav-button" href="#projects">Projects</a>
+  <a class="nav-button" href="#blog">Blog</a>
+  <a class="nav-button" href="#contact">Contact</a>
+</nav>
