add command keys and dark background

--- a/src/app/terminal-navbar/terminal-navbar.component.html
+++ b/src/app/terminal-navbar/terminal-navbar.component.html
@@ -5,9 +5,34 @@
   <div class="terminal-window-name">florianschmitz@MacBook-Pro:~</div>
 </div>
 <nav>
-  <a class="nav-button-active" href="#home">~ Home</a>
-  <a class="nav-button" href="#about">About</a>
-  <a class="nav-button" href="#projects">Projects</a>
-  <a class="nav-button" href="#blog">Blog</a>
-  <a class="nav-button" href="#contact">Contact</a>
+  <a class="nav-button-active" href="#home"
+    ><ul>
+      <li class="nav-button-text">~ Home</li>
+      <li>⌘1</li>
+    </ul></a
+  >
+  <a class="nav-button" href="#about"
+    ><ul>
+      <li class="nav-button-text">~ About</li>
+      <li>⌘2</li>
+    </ul></a
+  >
+  <a class="nav-button" href="#projects"
+    ><ul>
+      <li class="nav-button-text">~ Projects</li>
+      <li>⌘3</li>
+    </ul></a
+  >
+  <a class="nav-button" href="#blog"
+    ><ul>
+      <li class="nav-button-text">~ Blog</li>
+      <li>⌘4</li>
+    </ul></a
+  >
+  <a class="nav-button" href="#contact"
+    ><ul>
+      <li class="nav-button-text">~ Contact</li>
+      <li>⌘5</li>
+    </ul></a
+  >
 </nav>
