--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
-body,html{margin:0}
+body,
+html {
+    background-color: #000;
+    overflow: hidden;
+    margin: 0,
+}
