update nav height

--- a/src/app/terminal-navbar/terminal-navbar.component.html
+++ b/src/app/terminal-navbar/terminal-navbar.component.html
@@ -13,25 +13,25 @@
   >
   <a class="nav-button" href="#about"
     ><ul>
-      <li class="nav-button-text">~ About</li>
+      <li class="nav-button-text">About</li>
       <li>⌘2</li>
     </ul></a
   >
   <a class="nav-button" href="#projects"
     ><ul>
-      <li class="nav-button-text">~ Projects</li>
+      <li class="nav-button-text">Projects</li>
       <li>⌘3</li>
     </ul></a
   >
   <a class="nav-button" href="#blog"
     ><ul>
-      <li class="nav-button-text">~ Blog</li>
+      <li class="nav-button-text">Blog</li>
       <li>⌘4</li>
     </ul></a
   >
   <a class="nav-button" href="#contact"
     ><ul>
-      <li class="nav-button-text">~ Contact</li>
+      <li class="nav-button-text">Contact</li>
       <li>⌘5</li>
     </ul></a
   >
