--- a/src/app/terminal-navbar/terminal-navbar.component.scss
+++ b/src/app/terminal-navbar/terminal-navbar.component.scss
@@ -33,7 +33,7 @@ nav {
     background-color: #1C1C1C;
     color: #B5B5B5;
     padding: 10px;
-    font-size: 110%;
+    font-size: 100%;
     text-decoration: none;
 }
 
@@ -41,12 +41,13 @@ nav {
     background-color: #383938;
     color: #fff;
     padding: 10px;
-    font-size: 110%;
+    font-size: 100%;
     text-decoration: none;
 }
 
 .nav-button-text:after {
     content: " (-FloOS)";
+    align-items: center;
 }
 
 ul {
@@ -55,4 +56,5 @@ ul {
     margin: 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
