--- a/src/app/terminal-navbar/terminal-navbar.component.scss
+++ b/src/app/terminal-navbar/terminal-navbar.component.scss
@@ -24,7 +24,7 @@
 nav {
     display: grid;
     grid-gap: 1px;
-    grid-template-columns: 300px 300px 300px 300px 300px;
+    grid-template-columns: 20% 20% 20% 20% 20%;
     padding-top: 30px;
     background-color: #454545;
 }
