--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,9 @@ ul {
     justify-content: space-between;
     align-items: center;
 }
+
+.Typewriter__cursor{
+    color: transparent;
+    background-color: #c7c7c7;
+    padding-right: 3px;;
+}
