--- a/styles.css
+++ b/styles.css
@@ -89,3 +89,9 @@ ul {
     background-color: #c7c7c7;
     padding-right: 3px;;
 }
+
+p {
+     color: #C7C7C7;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
