make terminal navbar and input responsive

--- a/terminal/styles.css
+++ b/terminal/styles.css
@@ -1,9 +1,6 @@
 html {
     overflow: scroll;
     font-family: monospace;
-    min-width:900px;
-    width: auto !important;
-    width:900px;
 }
 
 body {
@@ -25,7 +22,6 @@ body {
 .terminal-window {
     background-color: #383938;
     width: 100%;
-    min-width:900px;
     height: 30px;
     position: absolute;
     align-items: center;
@@ -63,17 +59,19 @@ body {
 
 }
 
-.terminal-window-name {
+.terminal-window-name, .terminal-window-name-short {
     color: #B4B5B4;
-    padding-left: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    text-align: center;
 }
 
 nav {
-    display: grid;
     grid-gap: 1px;
-    grid-template-columns: 19.4% 19.4% 19.4% 19.4% 19.4% 3%;
     padding-top: 30px;
     background-color: #454545;
+    display: flex;
 }
 
 .nav-button {
@@ -82,6 +80,7 @@ nav {
     padding: 10px;
     font-size: 100%;
     text-decoration: none;
+    flex: 1 1 auto;
 }
 
 .nav-button-active {
@@ -90,6 +89,7 @@ nav {
     padding: 10px;
     font-size: 100%;
     text-decoration: none;
+    flex: 1 1 auto;
 }
 
 .nav-add-button {
@@ -101,17 +101,8 @@ nav {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.nav-more-button {
-    background-color: #252425;
-    color: #B5B5B5;
-    font-size: 10px;
-    text-decoration: none;
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    width: 35px;
+    height: 35px;
 }
 
 .nav-button-text:after {
@@ -164,31 +155,37 @@ form {
     display: none;
 }
 
-@media screen and (max-width: 600px) {
-  .nav-add-button {
+
+
+@media screen and (max-width: 900px) {
+  #contact {
     display: none;
   }
-    .nav-more-button {
-        display: flex;
-    }
+} 
+
+@media screen and (max-width: 730px) {
+  #blog {
+    display: none;
+  }
 }
 
-@media screen and (max-width: 250px) {
-    #contact {
-        display: none;
-    }
+@media screen and (max-width: 540px) {
+  #projects {
+    display: none;
+  }
+  input {
+    width: auto;
+  }
+} 
 
-    nav {
-        grid-template-columns: 24.4% 24.4% 24.4% 24.4% 2.4%;
-    }
-}
-
-@media screen and (max-width: 230px) {
-    #blog {
-        display: none;
-    }
-
-    nav {
-        grid-template-columns: 33%, 33%, 33%, 1%;
-    }
-}
+@media screen and (max-width: 360px) {
+  #about {
+    display: none;
+  }
+  .terminal-window-name {
+    display: none;
+  }
+  input {
+    width: auto;
+  }
+} 
