--- a/terminal/styles.css
+++ b/terminal/styles.css
@@ -59,7 +59,7 @@ body {
 
 }
 
-.terminal-window-name, .terminal-window-name-short {
+.terminal-window-name {
     color: #B4B5B4;
     margin-left: auto;
     margin-right: auto;
@@ -105,6 +105,19 @@ nav {
     height: 35px;
 }
 
+.nav-menu-button {
+    background-color: #252425;
+    color: #B5B5B5;
+    font-size: 13px;
+    text-decoration: none;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 35px;
+    height: 35px;
+}
+
 .nav-button-text:after {
     content: " (-FloOS)";
     align-items: center;
@@ -141,6 +154,7 @@ input {
     color: #C7C7C7;
     font-family: monospace;
     width: 80%;
+    font-size: 1em
 }
 
 input:focus { 
@@ -156,10 +170,15 @@ form {
 }
 
 
-
 @media screen and (max-width: 900px) {
   #contact {
     display: none;
+  }
+  .nav-add-button {
+    display: none;
+  }
+  .nav-menu-button {
+    display: flex;
   }
 } 
 
